--- a/categoria.html
+++ b/categoria.html
@@ -11,9 +11,11 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
-                <a href="categoria.html" class="cab"><strong> Categoria </strong></a> 
+                <ul class="log">
+                    <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
+                </ul>
+            <ul class="log">
+                <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
