--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
-                <a href="categoria.html" class="cab"><strong> Categoria </strong></a> 
+                <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
