--- a/contato.html
+++ b/contato.html
@@ -11,8 +11,10 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
+                <ul class="log">
+                    <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
+                </ul>
+            <ul class="log">
                 <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
@@ -21,7 +23,7 @@
                 <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
             </ul>
         </nav>
-</header>
+    </header>
 <div id="principal">
     <div class="corpo">
         <h2>Entre em Contato</h2>
