--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <header>
-            <nav>
-                <ul>
+        <nav>
+                <ul class="log">
                     <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
-                    <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
-                    <a href="contato.html" class="cab"><strong>Contato </strong></a> 
-                    <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
                 </ul>
-            </nav>
+            <ul class="log">
+                <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
+                <a href="contato.html" class="cab"><strong>Contato </strong></a> 
+                <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
+            </ul>
+        </nav>
     </header>
     <div id="principal">
         <div class="corpo">
