--- a/sobrenos.html
+++ b/sobrenos.html
@@ -15,7 +15,7 @@
                     <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
                 </ul>
             <ul class="log">
-                <a href="categoria.html" class="cab"><strong> Sobre nós </strong></a> 
+                <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
