--- a/sobrenos.html
+++ b/sobrenos.html
@@ -15,6 +15,7 @@
                     <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
                 </ul>
             <ul class="log">
+                <a href="index.html" class="cab"><strong> Home </strong></a> 
                 <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
@@ -26,7 +27,7 @@
     </header>
         <div id="principal">
             <div class="corpo">
-                <h2>Categorias<h2>
+                <h2>Sobre nós<h2>
                 <hr>
                 <div>
                     <br><br><br><br><br>
