--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
             <h2>Página principal</h2>
             <hr>
             <div>
-                <br><br><br><br><br>
-                <br><br><br><br><br>
-                <br><br><br><br><br>
-                <br><br><br><br><br>
-                <br><br><br><br><br>
-                <br><br><br><br><br>
+                <div class="doce">Conteudo 2</div>
+                <div class="salgada">Conteudo 1</div>
                 <h4>Todos os direitos reservados</h4>
             </div>
         </div>
