update footer and css

--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
             <h2>Página principal</h2>
             <hr>
             <div>
-                <div class="doce">Conteudo 2</div>
-                <div class="salgada">Conteudo 1</div>
+                <div class="doce">
+                    <h3>Receitas doces</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit explicabo accusantium excepturi commodi, quidem dicta dolorem natus eveniet omnis repellat fuga. Asperiores ratione rerum repellendus, tempore expedita hic perferendis id, sed amet aspernatur dolor alias provident explicabo? Sint nisi corrupti aliquam quaerat autem ab, molestias minima accusamus voluptas obcaecati fugit dolore impedit eum ullam debitis, iusto natus quos eveniet doloribus! Aliquid nesciunt explicabo pariatur, nemo, numquam totam saepe aspernatur vel, commodi laborum repellendus velit magnam tempore. Suscipit adipisci dolores dicta!
+                    </p>
+                </div>
+                <div class="salgada">
+                    <h3>Receitas salgadas</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, possimus? Ratione facilis nam, magnam in itaque sequi facere nesciunt asperiores illum maxime quas eveniet eaque error repudiandae, sed quibusdam velit deserunt hic, quaerat omnis! Asperiores esse temporibus corporis, sapiente voluptatum reprehenderit voluptate labore in? Quas ipsa accusamus deleniti, id tenetur delectus possimus. Consequatur provident fugit alias saepe doloribus totam sed sit illo ipsam quam repellat animi mollitia deleniti asperiores atque, eveniet fuga earum ex, sequi itaque unde placeat laboriosam dicta?
+                    </p>
+                </div>
+            <footer id="rodape">
                 <h4>Todos os direitos reservados</h4>
+            </footer>
             </div>
         </div>
     </div>
