--- a/sobrenos.html
+++ b/sobrenos.html
@@ -34,7 +34,9 @@
                     <br><br><br><br><br>
                     <br><br><br><br><br>
                     <br><br><br><br>
-                    <h4>Todos os direitos reservados</h4>
+                    <footer id="rodape">
+                        <h4>Todos os direitos reservados</h4>
+                    </footer>
                 </div>
             </div>
         </div>
