--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,9 @@
         </form>
         <div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <h4>Todos os direitos reservados</h4>
+            <footer id="rodape">
+                <h4>Todos os direitos reservados</h4>
+            </footer>
         </div>
     </div>
 </div>
