--- a/sobrenos.html
+++ b/sobrenos.html
@@ -30,10 +30,20 @@
                 <h2>Sobre nós<h2>
                 <hr>
                 <div>
-                    <br><br><br><br><br>
-                    <br><br><br><br><br>
-                    <br><br><br><br><br>
-                    <br><br><br><br>
+                    <br><br><br>
+                    <div class="contato">
+                            <img src="./img/cabeçalho/insta.png" alt="" class="sob">
+                    </div>
+                    <div class="contato">
+
+                    </div>
+                    <div class="contato">
+
+                    </div>
+                    <div class="contato">
+
+                    </div>
+                    <br><br><br>
                     <footer id="rodape">
                         <h4>Todos os direitos reservados</h4>
                     </footer>
