tag text-align: center; removida do corpo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div id="principal">
         <div class="corpo">
-            <h2>Página principal</h2>
+            <h2 class="titulo">Página principal</h2>
             <hr>
             <div>
                 <div class="doce">
@@ -43,7 +43,7 @@
                     </p>
                 </div>
             <footer id="rodape">
-                <h4>Todos os direitos reservados</h4>
+                <h4 class="titulo">Todos os direitos reservados</h4>
             </footer>
             </div>
         </div>
