--- a/sobrenos.html
+++ b/sobrenos.html
@@ -27,12 +27,12 @@
     </header>
         <div id="principal">
             <div class="corpo">
-                <h2>Sobre nós<h2>
+                <h2 class="titulo">Sobre nós<h2>
                 <hr>
                 <div>
                     <br><br><br>
                     <div class="contato">
-                            <img src="./img/cabeçalho/insta.png" alt="" class="sob">
+                            <img src="./img/Sobre nos/Jhon.jpeg" alt="" class="sob">
                     </div>
                     <div class="contato">
 
@@ -45,7 +45,7 @@
                     </div>
                     <br><br><br>
                     <footer id="rodape">
-                        <h4>Todos os direitos reservados</h4>
+                        <h4 class="titulo">Todos os direitos reservados</h4>
                     </footer>
                 </div>
             </div>
