--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
     </header>
 <div id="principal">
     <div class="corpo">
-        <h2>Entre em Contato</h2>
+        <h2 class="titulo">Entre em Contato</h2>
         <hr> 
         <br><br><br>
         <form>
@@ -47,7 +47,7 @@
         <div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <footer id="rodape">
-                <h4>Todos os direitos reservados</h4>
+                <h4 class="titulo">Todos os direitos reservados</h4>
             </footer>
         </div>
     </div>
