--- a/sobrenos.html
+++ b/sobrenos.html
@@ -31,17 +31,29 @@
                 <hr>
                 <div>
                     <br><br><br>
+
                     <div class="contato">
+
+                    </div>
+                    <div class="contato">
+                        <figure>
+                            <img src="./img/Sobre nos/Helio.jpeg" alt="" class="sob">
+                        </figure>
+                        <p>Helio de Oliveira Santos Neto <br>
+                           RA: 922200679
+                        </p> 
+                    </div>
+                    <div class="contato">
+
+                    </div>
+
+                    <div class="contato">
+                        <figure>
                             <img src="./img/Sobre nos/Jhon.jpeg" alt="" class="sob">
-                    </div>
-                    <div class="contato">
-
-                    </div>
-                    <div class="contato">
-
-                    </div>
-                    <div class="contato">
-
+                        </figure>
+                        <p>Jonathan Dos Santos Coutinho <br>
+                           RA:922202007
+                        </p> 
                     </div>
                     <br><br><br>
                     <footer id="rodape">
