--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
             <ul class="log">
                 <a href="index.html" class="cab"><strong> Home </strong></a> 
                 <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
-                <a href="contato.html" class="cab"><strong>Contato </strong></a> 
+                <a href="contato.html" class="cab" id="inpage"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
@@ -30,7 +30,7 @@
         <h2 class="titulo">Entre em Contato</h2>
         <hr> 
         <br><br><br>
-        <form>
+        <form class="formulario">
 
             <strong>Seu e-mail:</strong><br>
             <input type="text" name="email"><br><br>
