--- a/sobrenos.html
+++ b/sobrenos.html
@@ -16,7 +16,7 @@
                 </ul>
             <ul class="log">
                 <a href="index.html" class="cab"><strong> Home </strong></a> 
-                <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
+                <a href="sobrenos.html" class="cab" id="inpage"><strong> Sobre nós </strong></a> 
                 <a href="contato.html" class="cab"><strong>Contato </strong></a> 
                 <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
                 <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
@@ -57,7 +57,7 @@
                     </div>
                     <br><br><br>
                     <footer id="rodape">
-                        <h4 class="titulo">Todos os direitos reservados</h4>
+                        <h4 class="titulo">© COPYRIGHT 2005-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
                     </footer>
                 </div>
             </div>
