--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@
         <div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <footer id="rodape">
-                <h4 class="titulo">Todos os direitos reservados</h4>
+                <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
             </footer>
         </div>
     </div>
