--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, possimus? Ratione facilis nam, magnam in itaque sequi facere nesciunt asperiores illum maxime quas eveniet eaque error repudiandae, sed quibusdam velit deserunt hic, quaerat omnis! Asperiores esse temporibus corporis, sapiente voluptatum reprehenderit voluptate labore in? Quas ipsa accusamus deleniti, id tenetur delectus possimus. Consequatur provident fugit alias saepe doloribus totam sed sit illo ipsam quam repellat animi mollitia deleniti asperiores atque, eveniet fuga earum ex, sequi itaque unde placeat laboriosam dicta?
                     </p>
                 </div>
-            <footer id="rodape">
-                <h4 class="titulo">Todos os direitos reservados</h4>
-            </footer>
+                <footer id="rodape">
+                    <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
+                </footer>
             </div>
         </div>
     </div>
