--- a/sobrenos.html
+++ b/sobrenos.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <div class="testes">
+        
+        </div>
         <nav>
                 <ul class="log">
                     <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
@@ -25,6 +28,7 @@
             </ul>
         </nav>
     </header>
+
         <div id="principal">
             <div class="corpo">
                 <h2 class="titulo">Sobre nós<h2>
