--- a/sobrenos.html
+++ b/sobrenos.html
@@ -34,29 +34,29 @@
                 <div>
                     <br><br><br>
 
-                    <div class="contato">
+                    <section class="contato">
 
-                    </div>
-                    <div class="contato">
+                    </section>
+                    <section class="contato">
                         <figure>
                             <img src="./img/Sobre nos/Helio.jpeg" alt="" class="sob">
+                            <figcaption class="fig"> Helio de Oliveira Santos Neto <br>
+                                                     RA: 922200679
+                            </figcaption>
                         </figure>
-                        <p>Helio de Oliveira Santos Neto <br>
-                           RA: 922200679
-                        </p> 
-                    </div>
-                    <div class="contato">
+                    </section>
+                    <section class="contato">
 
-                    </div>
+                    </section>
 
-                    <div class="contato">
+                    <section class="contato">
                         <figure>
                             <img src="./img/Sobre nos/Jhon.jpeg" alt="" class="sob">
+                            <figcaption class="fig"> Jonathan Dos Santos Coutinho <br>
+                                                     RA:922202007
+                            </figcaption>
                         </figure>
-                        <p>Jonathan Dos Santos Coutinho <br>
-                           RA:922202007
-                        </p> 
-                    </div>
+                    </section>
                     <br><br><br>
                     <footer id="rodape">
                          <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
