--- a/contato.html
+++ b/contato.html
@@ -28,10 +28,10 @@
 <div id="principal">
     <div class="corpo">
         <br><br><br>
-        <form class="formulario">
+        <form class="formulario"> <!--form serve pra receber dados dos usuários porém neste projeto não tem essa função-->
 
             <strong>Seu e-mail:</strong><br>
-            <input type="text" name="email"><br><br>
+            <input type="text" name="email"><br><br> <!--input cria uma caixa digitável-->
 
             <strong>Assunto:</strong><br>
             <input type="text" name="assunto"><br><br>
