--- a/sobrenos.html
+++ b/sobrenos.html
@@ -35,7 +35,12 @@
                     <br><br><br>
 
                     <section class="contato">
-
+                        <figure>
+                            <img src="./img/Sobre nos/Gio.jpeg" alt="" class="sob">
+                            <figcaption class="fig"> Giovana Moura <br>
+                                                     RA: 922111565
+                            </figcaption>
+                        </figure>
                     </section>
                     <section class="contato">
                         <figure>
@@ -46,7 +51,12 @@
                         </figure>
                     </section>
                     <section class="contato">
-
+                        <figure>
+                            <img src="./img/Sobre nos/Jeni.jpeg" alt="" class="sob">
+                            <figcaption class="fig"> Jenniffer Lino Ferreira <br>
+                                                     RA: 922200277
+                            </figcaption>
+                        </figure>
                     </section>
 
                     <section class="contato">
