Atualização receita salgada

--- a/index.html
+++ b/index.html
@@ -1,52 +1,136 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cozinha Universitária</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/cabeçalho/favicon.ico">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="img/cabeçalho/favicon.ico" />
+  </head>
+  <body>
     <header>
-        <nav>
-                <ul class="log">
-                    <a href="index.html" class="cab"><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"></a>
-                </ul>
-            <ul class="log">
-                <a href="index.html" class="cab" id="inpage"><strong> Home </strong></a> 
-                <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
-                <a href="contato.html" class="cab"><strong>Contato </strong></a> 
-                <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="log">
+          <a href="index.html" class="cab"
+            ><img src="./img/cabeçalho/logo pronta.png" alt="" id="logo"
+          /></a>
+        </ul>
+        <ul class="log">
+          <a href="index.html" class="cab" id="inpage"
+            ><strong> Home </strong></a
+          >
+          <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a>
+          <a href="contato.html" class="cab"><strong>Contato </strong></a>
+          <a href="" class="cab"
+            ><img src="./img/cabeçalho/tik.png" alt="" class="redes"
+          /></a>
+          <a href="" class="cab"
+            ><img src="./img/cabeçalho/tube.png" alt="" class="redes"
+          /></a>
+          <a href="" class="cab"
+            ><img src="./img/cabeçalho/insta.png" alt="" class="redes"
+          /></a>
+          <a href="" class="cab"
+            ><img src="./img/cabeçalho/zap.png" alt="" class="redes"
+          /></a>
+        </ul>
+      </nav>
     </header>
     <div id="principal">
-        <div class="corpo">
-            <div>
-                <div class="doce">
-                    <h3>Receitas doces</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit explicabo accusantium excepturi commodi, quidem dicta dolorem natus eveniet omnis repellat fuga. Asperiores ratione rerum repellendus, tempore expedita hic perferendis id, sed amet aspernatur dolor alias provident explicabo? Sint nisi corrupti aliquam quaerat autem ab, molestias minima accusamus voluptas obcaecati fugit dolore impedit eum ullam debitis, iusto natus quos eveniet doloribus! Aliquid nesciunt explicabo pariatur, nemo, numquam totam saepe aspernatur vel, commodi laborum repellendus velit magnam tempore. Suscipit adipisci dolores dicta!
-                    </p>
-                </div>
-                <div class="salgada">
-                    <h3>Receitas salgadas</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, possimus? Ratione facilis nam, magnam in itaque sequi facere nesciunt asperiores illum maxime quas eveniet eaque error repudiandae, sed quibusdam velit deserunt hic, quaerat omnis! Asperiores esse temporibus corporis, sapiente voluptatum reprehenderit voluptate labore in? Quas ipsa accusamus deleniti, id tenetur delectus possimus. Consequatur provident fugit alias saepe doloribus totam sed sit illo ipsam quam repellat animi mollitia deleniti asperiores atque, eveniet fuga earum ex, sequi itaque unde placeat laboriosam dicta?
-                    </p>
-                </div>
-                <footer id="rodape">
-                    <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
-                </footer>
-            </div>
+      <div class="corpo">
+        <div> <br>
+          <div class="doce">
+            <h3>Receitas doces</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
+              explicabo accusantium excepturi commodi, quidem dicta dolorem
+              natus eveniet omnis repellat fuga. Asperiores ratione rerum
+              repellendus, tempore expedita hic perferendis id, sed amet
+              aspernatur dolor alias provident explicabo? Sint nisi corrupti
+              aliquam quaerat autem ab, molestias minima accusamus voluptas
+              obcaecati fugit dolore impedit eum ullam debitis, iusto natus quos
+              eveniet doloribus! Aliquid nesciunt explicabo pariatur, nemo,
+              numquam totam saepe aspernatur vel, commodi laborum repellendus
+              velit magnam tempore. Suscipit adipisci dolores dicta!
+            </p>
+          </div>
+          <div class="salgada">
+            <h2>Receita salgada</h2>
+            <h4>TORTA DE FRANGO</h4>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <section>
+              <h3>Recheio</h3>
+            </section>
+            <br />
+            <ul>
+              <li>500 g de peito de frango sem pele</li>
+              <li>1/2 litro de caldo de galinha</li>
+              <li>4 colheres (sopa) de óleo</li>
+              <li>1 dente de alho amassado</li>
+              <li>1 cebola picada</li>
+              <li>3 tomates sem pele e sem sementes</li>
+              <li>1 xícara (chá) de ervilhas</li>
+              <li>sal e pimenta-do-reino a gosto</li>
+            </ul>
+            <section>
+              <h3>Massa</h3>
+            </section>
+            <br />
+            <ul>
+              <li>250 ml de leite</li>
+              <li>3/4 de xícara (chá) de óleo</li>
+              <li>2 ovos</li>
+              <li>1 e 1/2 xícara (chá) de farinha de trigo</li>
+              <li>sal a gosto</li>
+              <li>1 colher (sopa) de fermento em pó</li>
+              <li>queijo ralado a gosto</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <section>
+              <h3>Recheio</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Cozinhe o peito de frango no caldo até ficar macio.</li>
+              <li>Separe 1 xícara (chá) de caldo do cozimento e reserve.</li>
+              <li>
+                Refogue os demais ingredientes e acrescente as ervilhas por
+                último.
+              </li>
+              <li>
+                Desfie o frango, misture ao caldo e deixe cozinhar até secar.
+              </li>
+            </ol> <br>
+            <h3>Massa</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Bata o leite, o óleo e os ovos no liquidificador em velocidade baixa.</li>
+              <li>Acrescente aos poucos a farinha, o sal e o fermento.</li>
+              <li>Despeje metade da massa em uma forma untada e adicione o recheio sobre ela.</li>
+              <li>Cubra com o restante de massa e o queijo ralado.</li>
+              <li>Leve ao forno preaquecido (180° C) até dourar.</li>
+            </ol>
+          </div>
+          <footer id="rodape">
+            <h4 class="titulo">
+              © COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS
+              DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.
+            </h4>
+          </footer>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
 
 <!--Olá mundo-->
