--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           >
           <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a>
           <a href="contato.html" class="cab"><strong>Contato </strong></a>
-          <a href="" class="cab"
+          <!-- <a href="" class="cab"
             ><img src="./img/cabeçalho/tik.png" alt="" class="redes"
           /></a>
           <a href="" class="cab"
@@ -33,7 +33,7 @@
           /></a>
           <a href="" class="cab"
             ><img src="./img/cabeçalho/zap.png" alt="" class="redes"
-          /></a>
+          /></a> -->
         </ul>
       </nav>
     </header>
