--- a/contato.html
+++ b/contato.html
@@ -17,11 +17,7 @@
             <ul class="log">
                 <a href="index.html" class="cab"><strong> Home </strong></a> 
                 <a href="sobrenos.html" class="cab"><strong> Sobre nós </strong></a> 
-                <a href="contato.html" class="cab" id="inpage"><strong>Contato </strong></a> 
-                <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
-                <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
+                <a href="contato.html" class="cab" id="inpage"><strong>Contato </strong></a>
             </ul>
         </nav>
     </header>
@@ -29,21 +25,26 @@
     <div class="corpo">
         <br><br><br>
         <form class="formulario"> <!--form serve pra receber dados dos usuários porém neste projeto não tem essa função-->
-
+            <h2>Fale Conosco</h2>
             <strong>Seu e-mail:</strong><br>
-            <input type="text" name="email"><br><br> <!--input cria uma caixa digitável-->
-
+            <input type="email" name="email"><br><br> <!--input cria uma caixa digitável-->
             <strong>Assunto:</strong><br>
             <input type="text" name="assunto"><br><br>
-
             <strong>Descrição:</strong><br>
-            <textarea></textarea><br>
-
-            <input type="submit" value="Enviar">
+            <textarea></textarea><br><br>
+            <input type="submit" value="Enviar"><br><br>
+            
+            <hr class="hrcontato">
 
         </form>
         <div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <ul id="socialprofile">
+                <h2>Siga nas redes sociais</h2>
+                <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt=""class="redes"></a>
+                <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt=""class="redes"></a>
+            </ul>
             <footer id="rodape">
                 <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS. PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
             </footer>
