--- a/index.html
+++ b/index.html
@@ -120,6 +120,121 @@
               <li>Cubra com o restante de massa e o queijo ralado.</li>
               <li>Leve ao forno preaquecido (180° C) até dourar.</li>
             </ol>
+            <br/>
+            <img src="./img/receita salgada/torta.jpg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" align="center" noshade>
+            <br />
+            <h4>FRICASSÊ DE FRANGO</h4>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1 lata de creme de leite</li>
+              <li>1 lata de milho verde</li>
+              <li>1 copo de requeijão cremoso</li>
+              <li>100 g de azeitona sem caroço</li>
+              <li>2 peitos de frango desfiados</li>
+              <li>200 g de mussarela fatiada</li>
+              <li>100 g de batata palha</li>
+              <li>1 xícara de água</li>
+              <li>1 pitada de sal</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Bata no liquidificador o milho, o requeijão, o creme de leite e a água.</li>
+              <li>Refogue o creme do liquidificador com o frango desfiado, as azeitonas e o sal até ficar com uma textura espessa.</li>
+              <li>Coloque o refogado numa assadeira, cubra com mussarela e espalhe a batata palha por cima.</li>
+              <li>Leve ao forno até borbulhar.</li>
+              <li>Sirva com arroz branco.</li>
+            </ol>
+            <br/>
+            <img src="./img/receita salgada/fricasse.jpeg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" align="center" noshade>
+            <br />
+            <h4>KIBE DE FORNO</h4>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <section>
+              <h3>Massa</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1/2 kg de carne moída</li>
+              <li>5 dentes de alho moído</li>
+              <li>3 cebolas raladas</li>
+              <li>1/4 xícara (chá) de salsinha picadinha</li>
+              <li>1/4 xícara (chá) de hortelã</li>
+              <li>sal, pimenta-do-reino e um pouquinho de vinagre</li>
+              <li>1/2 kg de trigo para kibe, que deve ficar 1 hora de molho</li>
+              <li>1 pacote de creme de cebola</li>
+            </ul>
+            <section>
+              <h3>Recheio</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1/2kg de carne moída refogada a seu gosto.</li>
+              <li>1 pote de queijo catupiry</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Escorra o trigo, misture todos os ingredientes da massa muito bem.</li>
+              <li>Eles devem estar bem picadinhos ou ralados.</li>
+              <li>Coloque metade em uma assadeira ou refratário, espalhe o recheio e tampe com o restante da massa.</li>
+              <li>Regue com bastante azeite de oliva.</li>
+              <li>Leve ao forno regular por, aproximadamente, 30 a 40 minutos ou até estar bem assado.</li>
+              <li>Corte ainda na assadeira e sirva.</li>
+            </ol>
+            <br/>
+            <img src="./img/receita salgada/kibe.jpeg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" align="center" noshade>
+            <br />
+            <h4>ROCAMBOLE DE CARNE MOÍDA</h4>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1/2 kg de carne moída</li>
+              <li>1 pacote de sopa de cebola</li>
+              <li>presunto fatiado</li>
+              <li>queijo fatiado</li>
+              <li>tempero verde</li>
+              <li>sal a gosto</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Tempere a carne moída com a sopa de cebola, o tempero verde e o sal.</li>
+              <li>Coloque a carne temperada sobre uma folha de papel laminado ou papel manteiga e abra a massa com um rolo, na espessura de 1 cm, mais ou menos.</li>
+              <li>Forre a carne com o presunto e o queijo, pode-se colocar também milho verde, ervilha e requeijão.</li>
+              <li>Enrole a carne, com ajuda da folha de papel laminado ou manteiga, em forma de rocambole.</li>
+              <li>Leve ao forno, em temperatura alta, por mais ou menos 30 minutos, ou no microondas por 15 minutos.</li>
+              <li>Bom apetite!</li>
+            </ol>
+            <br/>
+            <img src="./img/receita salgada/rocambole.jpeg" alt="" class="receita" height="140" width="300"/>
+            <br/>
           </div>
           <footer id="rodape">
             <h4 class="titulo">
