--- a/contato.html
+++ b/contato.html
@@ -51,7 +51,7 @@
                     <legend>Comentários</legend>
                     <div>
                         <label for="mensagem">
-                            <label for="mensagem" class="box">Mensagem:</label>
+                            <label for="mensagem">Mensagem:</label>
                             <textarea name="mensagem" id="mensagem" cols="60" rows="10"></textarea>
                         </label>
                     </div>
