--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <div>
-                        <label for="email">Email:</label>
+                        <label for="email">E-mail:</label>
                         <input type="text" name="email" id="email">
                     </div>
 
