--- a/contato.html
+++ b/contato.html
@@ -64,15 +64,24 @@
                             <input type="radio" name="novidades" id="nao">Não       
                     </div>
                 </fieldset>
+
+                <div class="submit">
+                    <input type="submit" value="ENVIAR">
+                </div>
+
             </form>
+
+            <hr>
+        
             <div>
-                <ul id="socialprofile">
-                    <h2>Siga nas redes sociais</h2>
-                    <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt="" class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt="" class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt="" class="redes"></a>
-                    <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt="" class="redes"></a>
-                </ul>
+                    <ul id="socialprofile">
+                        <h2>Siga nas redes sociais</h2>
+                        <a href="" class="cab"><img src="./img/cabeçalho/tik.png" alt="" class="redes"></a>
+                        <a href="" class="cab"><img src="./img/cabeçalho/tube.png" alt="" class="redes"></a>
+                        <a href="" class="cab"><img src="./img/cabeçalho/insta.png" alt="" class="redes"></a>
+                        <a href="" class="cab"><img src="./img/cabeçalho/zap.png" alt="" class="redes"></a>
+                    </ul>
+
                 <footer id="rodape">
                     <h4 class="titulo">© COPYRIGHT 2022-2022 COZINHA UNIVERSITÁRIA LTDA, TODOS OS DIREITOS RESERVADOS.
                         PROIBIDA A REPRODUÇÃO SEM AUTORIZAÇÃO.</h4>
