--- a/contato.html
+++ b/contato.html
@@ -31,18 +31,15 @@
                     <legend>Dados para contato</legend>
 
                     <div>
-                        <label for="nome">Nome:</label>
-                        <input type="text" name="nome" id="nome">
+                        <input type="text" name="nome" id="nome" placeholder="Nome Completo">
                     </div>
 
                     <div>
-                        <label for="email">E-mail:</label>
-                        <input type="text" name="email" id="email">
+                        <input type="text" name="email" id="email" placeholder="Digite seu email">
                     </div>
 
                     <div>
-                        <label for="assunto">Assunto:</label>
-                        <input type="text" name="assunto" id="assunto">
+                        <input type="text" name="assunto" id="assunto" placeholder="Assunto">
                     </div>
 
                 </fieldset>
@@ -51,8 +48,7 @@
                     <legend>Comentários</legend>
                     <div>
                         <label for="mensagem">
-                            <label for="mensagem">Mensagem:</label>
-                            <textarea name="mensagem" id="mensagem" cols="60" rows="10"></textarea>
+                            <textarea name="mensagem" id="mensagem" cols="60" rows="10" placeholder="Digite sua mensagem"></textarea>
                         </label>
                     </div>
 
