--- a/contato.html
+++ b/contato.html
@@ -31,11 +31,11 @@
                     <legend>Dados para contato</legend>
 
                     <div>
-                        <input type="text" name="nome" id="nome" placeholder="Nome Completo">
+                        <input type="text" name="nome" id="nome" placeholder="Nome">
                     </div>
 
                     <div>
-                        <input type="text" name="email" id="email" placeholder="Digite seu email">
+                        <input type="text" name="email" id="email" placeholder="Digite seu e-mail">
                     </div>
 
                     <div>
